--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </head>
     <body>
         <main>
-            <img class="pokemon_imagem" src="#" alt="pokemon">
+            <img class="pokemon_image" src="#" alt="pokemon">
             <h1 class="pokemon_data">
-                <span class="pokemon_number">6</span> -
-                <span class="pokemon_name">charizard</span>
+                <span class="pokemon_number"></span> -
+                <span class="pokemon_name"></span>
             </h1>
 
             <form class="form">
