--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <form class="form">
                 <input type="search"
                 class="input_search"
-                placeholder="Name or Number"
+                placeholder="Nome ou Número"
                 required
                 />
             </form>
 
             <div class="buttons">
-                <button class="button btn-prev">Prev &lt;</button>
-                <button class="button btn-next">Next &gt;</button>
+                <button class="button btn-prev">Ant. &lt;</button>
+                <button class="button btn-next">Próx. &gt;</button>
             </div>
             <img class="pokedex" src="./images/pokedex.png" alt="pokedex">
         </main>
