Adicionado os tipos do Pokemon

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 />
             </form>
 
+            <div class="types">
+                <button class="btn-type-one" disabled></button>
+                <button class="btn-type-two" disabled></button>
+            </div>
+            
             <div class="buttons">
                 <button class="button btn-prev">Ant. &lt;</button>
                 <button class="button btn-next">Próx. &gt;</button>
